# WA1

./: .gitignore  Cargo.toml  LICENSE.md  README.md  TYPE-NOTES.MD  WHITEPAPER.MD
ast/: Cargo.toml
ast/src/: ast_types.rs  expr.rs  func.rs  intrinsic.rs  lib.rs  stmt.rs  types.rs
errs/: Cargo.toml
errs/src/: lib.rs  source_location.rs
lib-mem/: mem.wa1
main/: Cargo.toml
main/src/: main.rs  one.ws
object-file/: Cargo.toml
object-file/src/: lib.rs
parser/: Cargo.toml
parser/src/: lib.rs  sample.ts
parser/src/parser/: mod.rs  parser_func.rs  parser_int.rs  parser_op.rs  parser_option.rs  parser_phase_1.rs  parser_type.rs  parser_typeguard.rs  parser_unsafe.rs
parser/src/tree_transform/: mod.rs
ress/: Cargo.toml  license.md
ress/src/: lib.rs  look_behind.rs  tokens.rs
ress/src/tokenizer/: mod.rs  tokens.rs
std-lib/mem/: build-wsb.json  malloc.c  mem.wa1
std-lib/mem/src/: malloc.wa1  option.wa1  test.wa1
std-lib/scripts/: build.sh
std-lib/unsafe_option/: unsafe_option.wa1
test-runner/: Cargo.toml
test-runner/src/: main.rs
tests/generics-1/: build-wsb.json
tests/generics-1/src/: assert.wa1  basic.wa1  index.wa1  option.wa1
tests/linker/: build-wsb.json
tests/linker-mem/: build-wsb.json
tests/linker-mem/src/: array.wa1  assert.wa1  cache.wa1  complex.wa1  index.wa1  ptr.wa1
tests/linker/src/: one.wa1  two.wa1
tests/scripts/: run.sh
tests/simple/: one.wa1
tests/types-1/: build-wsb.json
tests/types-1/src/: index.wa1  int.wa1  unsafePtr.wa1  unsafeStruct.wa1  userTraits1.wa1  userTypes.wa1  userTypes1.wa1  userTypes2.wa1
types/: Cargo.toml
types/src/: cast.rs  generics.rs  lib.rs
wa1/: Cargo.toml
wa1-ast/: Cargo.toml
wa1-ast/src/: ast_types.rs  expr.rs  func.rs  lib.rs
wa1-errs/: Cargo.toml
wa1-errs/src/: lib.rs
wa1-generator/: Cargo.toml
wa1-generator/src/: compile_int.rs  compile_ptr.rs  generate.rs  lib.rs  mem.rs  transform.rs  wasm_types.rs
wa1-generator/src/wasm/: mod.rs  wasm_instructions.rs  wasm_module.rs  wasm_sections.rs  wasm_serialize.rs
wa1-lexer/: Cargo.toml
wa1-lexer/src/: lib.rs  tokens.rs
wa1-parser/: Cargo.toml  license.md
wa1-parser/src/: lib.rs
wa1-parser/src/generics/: mod.rs
wa1-parser/src/parser/: mod.rs  parser_func.rs  parser_int.rs  parser_op.rs  parser_option.rs  parser_phase_1.rs  parser_type.rs  parser_typeguard.rs  parser_unsafe.rs
wa1-parser/src/tree_transform/: mod.rs
wa1-types/: Cargo.toml
wa1-types/src/: cast.rs  generics.rs  lib.rs
wa1/src/: build_config.rs  main.rs  one.wa1
writer/: Cargo.toml  LICENSE.md
writer/src/: compile_int.rs  compile_ptr.rs  compile_unsafe.rs  lib.rs  mem.rs  steps.md  transform.rs  wasm_types.rs
writer/src/wasm/: mod.rs  wasm_code.rs  wasm_instructions.rs  wasm_module.rs  wasm_object_file.rs  wasm_sections.rs  wasm_serialize.rs
