[package]
name = "parser"
version = "0.5.2"
authors = ["Robert Masen <r@robertmasen.pizza>", "theidiotmachine <dinsdt@googlemail.com>"]
repository = "https://github.com/FreeMasen/RESSA"
description = "A Typescript parser"
license = "MIT"
readme = "./README.md"
keywords = ["JavaScript", "parsing", "JS", "ES", "ECMA"]
categories = ["parsing", "text-processing", "web-programming"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
ress = { path = "../ress" }
ast = { path = "../ast" }
errs = { path = "../errs" }
log = "0.4"
backtrace = "0"
