[package]
name = "wa1-generator"
version = "0.0.1"
authors = ["theidiotmachine <dinsdt@googlemail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wa1-ast = { path = "../wa1-ast" }
wa1-parser = { path = "../wa1-parser" }
wa1-errs = { path = "../wa1-errs" }
wa1-types = { path = "../wa1-types" }
parity-wasm = "0.41"
