[package]
name = "wa1"
version = "0.1.0"
authors = ["theidiotmachine <dinsdt@googlemail.com>"]
edition = "2018"
default-run = "wa1"

[dependencies]
ress = { path = "../ress" }
ast = { path = "../ast" }
parser = { path = "../parser" }
writer = { path = "../writer" }
errs = { path = "../errs" }
clap = "~2.33.0"
serde = "1.0.104"
serde_json = "1.0"
parity-wasm = "0.41"
