[package]
name = "writer"
version = "0.1.0"
authors = ["theidiotmachine <dinsdt@googlemail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ast = { path = "../ast" }
parser = { path = "../parser" }
errs = { path = "../errs" }
types = { path = "../types" }
parity-wasm = "0.41"
